# progression-notebook

./: .env.example  .gitignore  Dockerfile  README.md  check_days.py  check_each_day.py  dashboard.py  dashboard_viz.py  docker-compose.yml  hermes_api.py  load_web_unit.py  progression.ipynb  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt  test_web_unit.py
.github/workflows/: tests.yml
config/: units.yaml
src/: __init__.py
src/api/: __init__.py  activities.py  auth.py  cache.py  client.py
src/core/: __init__.py  detection.py  models.py  scoring.py
src/data/: __init__.py  loaders.py  transformers.py
src/ui/: __init__.py  app.py  app_main.py
src/ui/components/: charts.py  tables.py  widgets.py
src/ui/pages/: __init__.py  progression.py  ranking.py  suspicious.py
tests/: README.md  pytest.ini  test_api.py  test_detection.py
